--- a/Api/Server/appsettings.json
+++ b/Api/Server/appsettings.json
@@ -10,8 +10,10 @@
   "ApplicationSettings": {
 
     "ConnectionStrings": {
-      "QueriesConnectionString": "Password=1234512345;TrustServerCertificate=True;Persist Security Info=True;User ID=SA;Initial Catalog=DB_FormBuilder;Data Source=.",
-      "CommandsConnectionString": "Password=1234512345;TrustServerCertificate=True;Persist Security Info=True;User ID=SA;Initial Catalog=DB_FormBuilder;Data Source=.",
+      //"QueriesConnectionString": "Password=1234512345;TrustServerCertificate=True;Persist Security Info=True;User ID=SA;Initial Catalog=DB_FormBuilder;Data Source=.",
+      //"CommandsConnectionString": "Password=1234512345;TrustServerCertificate=True;Persist Security Info=True;User ID=SA;Initial Catalog=DB_FormBuilder;Data Source=.",
+      "QueriesConnectionString": "Password=1234512345;TrustServerCertificate=True;Persist Security Info=True;User ID=SA;Initial Catalog=DB_FormBuilder;Data Source=localhost\\SQLEXPRESS",
+      "CommandsConnectionString": "Password=1234512345;TrustServerCertificate=True;Persist Security Info=True;User ID=SA;Initial Catalog=DB_FormBuilder;Data Source=localhost\\SQLEXPRESS",
 
       "QueriesDatabaseProvider": 0,
       "CommandsDatabaseProvider": 0
